--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -9,7 +9,10 @@
   <ItemGroup>
 	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.11" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.11" />
-	  <ProjectReference Include="..\Presistent\Presistent.csproj" />
   </ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\Presistent\Presistent.csproj" />
+	</ItemGroup>
 
 </Project>
