--- a/WeedingEventManagment-WebApp/WeedingEventManagment-WebApp.csproj
+++ b/WeedingEventManagment-WebApp/WeedingEventManagment-WebApp.csproj
@@ -17,6 +17,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\Service\Service.csproj" />
 		<ProjectReference Include="..\Domain\Domain.csproj" />
 	</ItemGroup>
