--- a/WeedingEventManagment-WebApp/appsettings.json
+++ b/WeedingEventManagment-WebApp/appsettings.json
@@ -1,12 +1,17 @@
 {
   "ConnectionStrings": {
-    "DatabaseConnetion": "Server=.;Database=WeedingEventManagment;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DatabaseConnection": "Server=(localdb)\\mssqllocaldb;Database=WeedingEventManagmentDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Swagger": {
+    "Title": "WeddingApp API",
+    "Version": "v1"
+  }
 }
