--- a/WeedingEventManagment-WebApp/WeedingEventManagment-WebApp.csproj
+++ b/WeedingEventManagment-WebApp/WeedingEventManagment-WebApp.csproj
@@ -8,6 +8,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Content Remove="Views\Home\Login.cshtml" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Include="Views\Home\Login.cshtml" />
 		<None Include="wwwroot\img\after-s.png" />
 		<None Include="wwwroot\img\coupleee.png" />
 	</ItemGroup>
@@ -19,6 +24,14 @@
 	<ItemGroup>
 		<ProjectReference Include="..\Service\Service.csproj" />
 		<ProjectReference Include="..\Domain\Domain.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <UpToDateCheckInput Remove="Views\Home\Login.cshtml" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <_ContentIncludedByDefault Remove="Views\Home\Login.cshtml" />
 	</ItemGroup>
 
 </Project>
